--- a/android01/hw2/app/src/main/res/layout/activity_main.xml
+++ b/android01/hw2/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_division"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_multiply"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toEndOf="@+id/button6"
         app:layout_constraintTop_toBottomOf="@+id/button_division" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_minus"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button_multiply" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_plus"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -54,7 +54,7 @@
         app:layout_constraintStart_toEndOf="@+id/button_equally"
         app:layout_constraintTop_toBottomOf="@+id/button_minus" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button1"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button4"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button7"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button0"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -101,7 +101,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button2"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -114,7 +114,7 @@
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button5"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -126,7 +126,7 @@
         app:layout_constraintStart_toEndOf="@+id/button4"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button8"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -137,7 +137,7 @@
         app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintTop_toBottomOf="@+id/button5" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_clear"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -149,7 +149,7 @@
         app:layout_constraintStart_toEndOf="@+id/button0"
         app:layout_constraintTop_toBottomOf="@id/button8" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button3"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -163,7 +163,7 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button6"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -176,7 +176,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button9"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
@@ -187,7 +187,7 @@
         app:layout_constraintStart_toEndOf="@+id/button8"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_equally"
         android:layout_width="@dimen/widthButton"
         android:layout_height="@dimen/heightButton"
