создание кнопки переключателя темы в activity_main.xml

--- a/android01/hw2/app/src/main/res/layout/activity_main.xml
+++ b/android01/hw2/app/src/main/res/layout/activity_main.xml
@@ -218,5 +218,20 @@
         app:layout_constraintWidth_percent="0.6"
         android:autofillHints="" />
 
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/editTextScoreBoard"
+        app:layout_constraintEnd_toStartOf="@+id/editTextScoreBoard"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/editTextScoreBoard"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintWidth_percent="0.15"
+        app:layout_constraintHeight_percent="0.1"
+        />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
