--- a/android01/hw2/app/src/main/res/layout-land/activity_main.xml
+++ b/android01/hw2/app/src/main/res/layout-land/activity_main.xml
@@ -225,6 +225,7 @@
         app:layout_constraintWidth_percent="0.3" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switch_Button_Themes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@id/editTextScoreBoard"
