--- a/android01/hw2/app/src/main/res/values/dimens.xml
+++ b/android01/hw2/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="marginButton">10dp</dimen>
+    <dimen name="paddingButton">10dp</dimen>
     <dimen name="widthButton">70dp</dimen>
     <dimen name="heightButton">70dp</dimen>
     <!--
