--- a/android01/hw2/app/src/main/res/layout/activity_settings.xml
+++ b/android01/hw2/app/src/main/res/layout/activity_settings.xml
@@ -8,18 +8,67 @@
     tools:context=".SettingsActivity"
     tools:deviceIds="wear">
 
-
-    <TextView
-        android:id="@+id/textView_Settings"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="212dp"
-        android:layout_marginBottom="629dp"
-        android:text="TextView"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView_Settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/paddingButton"
+            android:text="@string/text_textView_Settings"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/rbutton_Light_Theme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginButton"
+                android:padding="@dimen/paddingButton"
+                android:text="@string/text_rbutton_Light_Theme"
+                app:layout_constraintEnd_toEndOf="@+id/textView_Settings"
+                app:layout_constraintStart_toStartOf="@+id/textView_Settings"
+                app:layout_constraintTop_toBottomOf="@+id/textView_Settings" />
+
+            <RadioButton
+                android:id="@+id/rbutton_Dark_Theme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginButton"
+                android:padding="@dimen/paddingButton"
+                android:text="@string/text_rbutton_Dark_Theme" />
+            <RadioButton
+                android:id="@+id/rbutton_Anciet_Rus_Theme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginButton"
+                android:padding="@dimen/paddingButton"
+                android:text="@string/text_rbutton_AncientRus_Theme" />
+            <RadioButton
+                android:id="@+id/rbutton_Default_Theme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginButton"
+                android:padding="@dimen/paddingButton"
+                android:text="@string/text_rbutton_Default_Theme" />
+        </RadioGroup>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
