--- a/android01/hw2/app/src/main/res/values/themes.xml
+++ b/android01/hw2/app/src/main/res/values/themes.xml
@@ -14,4 +14,24 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AncientRus" parent="Theme.MyApplicationLight">
+        <item name="android:textColor">@color/design_default_color_primary</item>
+        <item name="android:layout_marginStart">@dimen/margin</item>
+        <item name="android:layout_marginEnd">@dimen/margin</item>
+        <item name="android:layout_marginTop">@dimen/margin</item>
+        <item name="android:fontFamily">@font/font</item>
+        <item name="android:background">@color/teal_200</item>
+        <item name="android:textStyle">italic</item>
+    </style>-->
+
+    <style name="AppThemeLight" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">#e91e63</item>
+        <item name="colorPrimaryDark">#b0003a</item>
+        <item name="colorAccent">#ff6090</item>
+    </style>
+
+    <style name="AppThemeDark" parent="Theme.MaterialComponents">
+    </style>
+
+
 </resources>
