--- a/android01/hw2/app/src/main/res/values/dimens.xml
+++ b/android01/hw2/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     -->
     <dimen name="inner_frame_layout_padding">5dp</dimen>
     <dimen name="margin">8dp</dimen>
+    <dimen name="width_Edit_Text">0dp</dimen>
+    <dimen name="height_Edit_Text">0dp</dimen>
+    <dimen name="text_Size_Edit_text">24sp</dimen>
 </resources>
