--- a/android01/hw2/app/src/main/res/values-land/dimens.xml
+++ b/android01/hw2/app/src/main/res/values-land/dimens.xml
@@ -2,4 +2,7 @@
     <dimen name="marginButton">3dp</dimen>
     <dimen name="widthButton">60dp</dimen>
     <dimen name="heightButton">60dp</dimen>
+
+    <dimen name="text_Size_Edit_text">24sp</dimen>
+    <dimen name="text_Size_Button_settings">24sp</dimen>
 </resources>
